Feat: added the post action menu

--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@
   
     /* Blogs */
     .blog-card {
-      @apply flex gap-4 flex-col md:flex-row  bg-[#030317] p-3 border border-slate-800/40 rounded-lg transition-all hover:border-blue-900/50 hover:shadow-lg shadow-slate-200/50 cursor-pointer;
+      @apply flex gap-4 flex-col items-center md:flex-row  bg-[#030317] p-3 border border-slate-800/40 rounded-lg transition-all hover:border-blue-900/50 hover:shadow-lg shadow-slate-200/50 cursor-pointer;
     }
   
     .blog-card > div {
