Feat: added form input style classnames

--- a/src/index.css
+++ b/src/index.css
@@ -115,5 +115,10 @@
     .action-menu-item {
       @apply px-4 py-2 hover:bg-slate-800 flex w-full items-center gap-2 text-gray-100 transition-all;
     }
+
+    /* Form Input */
+    .form-input {
+      @apply w-full p-3 bg-[#030317] border border-white/20 rounded-md focus:outline-none focus:border-indigo-500;
+    }
   }
   
